All missing elements added

--- a/index.html
+++ b/index.html
@@ -839,6 +839,283 @@
           </div>
         </td>
       </tr>
+      <tr class="space__between"></tr>
+      <tr>
+        <td class="empty" colspan="3"></td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">57</span>
+              <span class="elemento__name">La</span>
+            </div>
+            <span class="elemento__full__name">Lantânio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">58</span>
+              <span class="elemento__name">Ce</span>
+            </div>
+            <span class="elemento__full__name">Cério</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">59</span>
+              <span class="elemento__name">Pr</span>
+            </div>
+            <span class="elemento__full__name">Praseodímio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">60</span>
+              <span class="elemento__name">Nd</span>
+            </div>
+            <span class="elemento__full__name">Neodímio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">61</span>
+              <span class="elemento__name">Pm</span>
+            </div>
+            <span class="elemento__full__name">Promécio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">62</span>
+              <span class="elemento__name">Sm</span>
+            </div>
+            <span class="elemento__full__name">Samário</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">63</span>
+              <span class="elemento__name">Eu</span>
+            </div>
+            <span class="elemento__full__name">Európio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">64</span>
+              <span class="elemento__name">Gd</span>
+            </div>
+            <span class="elemento__full__name"> Gadolínio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">65</span>
+              <span class="elemento__name">Tb</span>
+            </div>
+            <span class="elemento__full__name">Térbio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">66</span>
+              <span class="elemento__name">Dy</span>
+            </div>
+            <span class="elemento__full__name">Disprósio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">67</span>
+              <span class="elemento__name">Ho</span>
+            </div>
+            <span class="elemento__full__name">Hólmio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">68</span>
+              <span class="elemento__name">Er</span>
+            </div>
+            <span class="elemento__full__name">Érbio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">69</span>
+              <span class="elemento__name">Tm</span>
+            </div>
+            <span class="elemento__full__name">Túlio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">70</span>
+              <span class="elemento__name">Yb</span>
+            </div>
+            <span class="elemento__full__name">Itérbio</span>
+          </div>
+        </td>
+        <td class="lantanideo elemento">
+          <div>
+            <div>
+              <span class="elemento__num">71</span>
+              <span class="elemento__name">Lu</span>
+            </div>
+            <span class="elemento__full__name">Lutécio</span>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td class="empty" colspan="3"></td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">89</span>
+              <span class="elemento__name">Ac</span>
+            </div>
+            <span class="elemento__full__name">Actínio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">90</span>
+              <span class="elemento__name">Th</span>
+            </div>
+            <span class="elemento__full__name">Tório</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">91</span>
+              <span class="elemento__name">Pa</span>
+            </div>
+            <span class="elemento__full__name">Protactínio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">92</span>
+              <span class="elemento__name">U</span>
+            </div>
+            <span class="elemento__full__name">Urânio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">93</span>
+              <span class="elemento__name">Np</span>
+            </div>
+            <span class="elemento__full__name">Netúnio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">94</span>
+              <span class="elemento__name">Pu</span>
+            </div>
+            <span class="elemento__full__name">Plutônio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">95</span>
+              <span class="elemento__name">Am</span>
+            </div>
+            <span class="elemento__full__name">Amerício</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">96</span>
+              <span class="elemento__name">Cm</span>
+            </div>
+            <span class="elemento__full__name">Cúrio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">97</span>
+              <span class="elemento__name">Bk</span>
+            </div>
+            <span class="elemento__full__name">Berquélio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">98</span>
+              <span class="elemento__name">Cf</span>
+            </div>
+            <span class="elemento__full__name">Califórnio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">99</span>
+              <span class="elemento__name">Es</span>
+            </div>
+            <span class="elemento__full__name">Einstênio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">100</span>
+              <span class="elemento__name">Fm</span>
+            </div>
+            <span class="elemento__full__name">Férmio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">101</span>
+              <span class="elemento__name">Md</span>
+            </div>
+            <span class="elemento__full__name">Mendelévio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">102</span>
+              <span class="elemento__name">No</span>
+            </div>
+            <span class="elemento__full__name">Nobélio</span>
+          </div>
+        </td>
+        <td class="actinidio elemento">
+          <div>
+            <div>
+              <span class="elemento__num">103</span>
+              <span class="elemento__name">Lr</span>
+            </div>
+            <span class="elemento__full__name">Laurêncio</span>
+          </div>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
