Added header and footer

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tabela periódica</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1>Tabela periódica</h1>
+    </header>
     <table>
       <tr>
         <th>1A</th>
@@ -1117,5 +1120,49 @@
         </td>
       </tr>
     </table>
+    <footer>
+      <div class="legenda">
+        <div class="legenda__element">
+          <div class="legenda__square metal__alcalino"></div>
+          <span class="legenda__name">Metais alcalinos</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square alcalino__terroso"></div>
+          <span class="legenda__name">Metais alcalino-terrosos</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square metal__transicao"></div>
+          <span class="legenda__name">Metais de transição</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square outro__metal"></div>
+          <span class="legenda__name">Outros metais</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square semi__metal"></div>
+          <span class="legenda__name">Semimetais</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square nao__metal"></div>
+          <span class="legenda__name">Não metais</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square halogenio"></div>
+          <span class="legenda__name">Halogênio</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square gas__nobre"></div>
+          <span class="legenda__name">Gases nobres</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square lantanideo"></div>
+          <span class="legenda__name">Lantanídeos</span>
+        </div>
+        <div class="legenda__element">
+          <div class="legenda__square actinidio"></div>
+          <span class="legenda__name">Actinídios</span>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
