--- a/index.html
+++ b/index.html
@@ -479,9 +479,9 @@
           <div>
             <div>
               <span class="elemento__num">49</span>
-              <span class="elemento__name">Ag</span>
+              <span class="elemento__name">In</span>
             </div>
-            <span class="elemento__full__name">Prata</span>
+            <span class="elemento__full__name">Índio</span>
           </div>
         </td>
         <td class="outro__metal elemento">
