Light and Dark Theme added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>Tabela periódica</h1>
+      <button type="button" id="btn__switch">Alterar Modo</button>
     </header>
     <table>
       <tr>
@@ -1164,5 +1165,6 @@
         </div>
       </div>
     </footer>
+    <script src="app.js"></script>
   </body>
 </html>
